- Reintroduced and tweaked the 'floating' profile. This is meant to be used in combination with Lost Worlds mod
- No longer spawn player in solid blocks for the lost city dimension and in combination with Lost Worlds
- Better spawn location for cavern style worlds
- In floating profile the underside of buildings is generated better

1.20-7.0.4:
- TqLxQuanZ fixed a problem where a building has an extreme rare chance to not generate

1.20-7.0.3:
- The createbuilding command now supports a (relative) position argument. This allows you to create a building at a specific location

1.20-7.0.2:
- The createpart command now supports a (relative) position argument. This allows you to create a part at a specific location

1.20-7.0.1:
- TqLxQuanZ changed hardAir to structure_void so that the commandblock can be used again

1.20-7.0.0:
- Port to 1.20

1.19.4-6.2.3:
- TqLxQuanZ fixed mincellars config is not being accounted for buildings

1.19.4-6.2.2:
- TqLxQuanZ fixed a problem with the asset registry cache not being cleaned if you (in single player) exit from a world and load a new one

1.19.4-6.2.1:
- Kasualix fixed the day/night cycle in the Lost Cities dimension
- It should now again be possible to use Lost Cities server side only

1.19.4-6.2.0:
- New lostcities:lights tag from TqLxQuanZ that Lost Cities will use to check if a block can emit light

1.19.3-6.1.2:
- Better error reporting and avoidance of crashing in case of a chunk generation error
- The createbuilding, createpart, and locatepart commands will now correctly use resource locations as arguments. They also support completion

1.19.3-6.1.1:
- TqLxQuanZ fixed a problem where bridges wouldn't use the computed palette
- TqLxQuanZ implemented optional door generation and cellar filler generation for buildings
- Fixed a problem with multibuildings where the chunks could sometimes generate at different heights

1.19.3-6.1.0:
- Ported to 1.19.3

1.19-6.0.10:
- Better feature registration

1.19-6.0.9: