@@ -4,6 +4,7 @@ Upcoming:
 - No longer spawn player in solid blocks for the lost city dimension and in combination with Lost Worlds
 - Better spawn location for cavern style worlds
 - In floating profile the underside of buildings is generated better
+- Tooltips are back in the Lost City configuration screen. Added info about cavern and floating profiles
 
 1.20-7.0.4:
 - TqLxQuanZ fixed a problem where a building has an extreme rare chance to not generate
